# SpaceCases

./: .codespellrc  .dockerignore  .gitignore  LICENSE  README.md  checks.sh
.github/workflows/: assets.yml  checks.yml  codespell.yml  common.yml  leaderboards.yml  spacecases.yml
common/: README.md  pyproject.toml
common/src/common/: __init__.py
services/assets/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/assets/src/: constants.py  gen_container_metadata.py  gen_images.py  gen_item_metadata.py  refresh_prices.py  util.py
services/leaderboards/: .env.example  Dockerfile  README.md  gen_leaderboards.py  gen_leaderboards.sh  pyproject.toml
spacecases/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
spacecases/spacecases/: __main__.py  autocomplete.py  bot.py  constants.py  database.py  environment.py  exceptions.py  leaderboard.py  strutils.py
spacecases/spacecases/cogs/: admin.py  cs.py  user.py
spacecases/spacecases/commands/admin/: sync.py
spacecases/spacecases/commands/cs/: containers.py  item.py  open.py  upgrade.py
spacecases/spacecases/commands/user/: balance.py  claim.py  close.py  inventory.py  leaderboard.py  ranking.py  register.py  sell.py  transfer.py
spacecases/spacecases/sql/inventory/: add_item.sql  edit_item.sql  get_inventory.sql  get_inventory_check_exist.sql  get_item.sql  lock_items.sql  remove_item.sql  remove_item2.sql
spacecases/spacecases/sql/migrations/: 0_create_users_table.sql  1_create_item_type.sql  2_create_items_table.sql  3_items_table_idx_on_owner_id.sql
spacecases/spacecases/sql/user/: close.sql  count_users.sql  does_user_exist.sql  does_user_exist_for_update.sql  register.sql
spacecases/spacecases/sql/user/money/: balance.sql  balance_for_update.sql  change_balance.sql  claim.sql  try_deduct_balance.sql
spacecases/spacecases/ui/: __init__.py
spacecases/spacecases/ui/embed/: __init__.py  exception.py  general.py  paginated_embed.py  yes_no.py
spacecases/tests/: test_strutils.py
website/: README.md
